--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -59,11 +59,15 @@ jobs:
         system-packages: 'libX11-devel libXrandr-devel libXinerama-devel libXcursor-devel libXi-devel mesa-libGL-devel'
         pre-build-command: |
           echo "Debugging environment:"
-          ls /opt/python
-          which python
-          python --version
+          ls /
+          ls /opt
+          which python3
+          python3 --version
+          which pip3
+          pip3 --version
           env | sort
           
+          # Rest of your build commands here...
           # Install Wayland from source
           curl -LO https://wayland.freedesktop.org/releases/wayland-1.18.0.tar.xz
           tar xf wayland-1.18.0.tar.xz
@@ -91,7 +95,7 @@ jobs:
           cmake --build build --config Release
   
     - name: Install Twine
-      run: pip install twine
+      run: pip3 install twine
   
     - name: Publish on PyPI
-      run: python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} wheelhouse/*.whl --verbose --disable-progress-bar
+      run: python3 -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} wheelhouse/*.whl --verbose --disable-progress-bar
