--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -61,11 +61,23 @@ jobs:
           echo "Debugging environment:"
           ls /
           ls /opt
-          which python3
-          python3 --version
-          which pip3
-          pip3 --version
+          ls /opt/python
+          which python
+          python --version
+          which pip
+          pip --version
           env | sort
+          
+          # Use the appropriate Python version
+          PYTHON_PATH=$(ls /opt/python | grep cp311)
+          if [ -z "$PYTHON_PATH" ]; then
+            echo "Python 3.11 not found"
+            exit 1
+          fi
+          export PATH="/opt/python/$PYTHON_PATH/bin:$PATH"
+          
+          python --version
+          pip --version
           
           # Rest of your build commands here...
           # Install Wayland from source
@@ -95,7 +107,7 @@ jobs:
           cmake --build build --config Release
   
     - name: Install Twine
-      run: pip3 install twine
+      run: pip install twine
   
     - name: Publish on PyPI
-      run: python3 -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} wheelhouse/*.whl --verbose --disable-progress-bar
+      run: python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} wheelhouse/*.whl --verbose --disable-progress-bar
