--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -50,64 +50,53 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: recursive
-  
-    - name: Build manylinux Python wheels
-      uses: RalfG/python-wheels-manylinux-build@v0.7.1-manylinux2014_x86_64
+
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          libwayland-bin \
+          libwayland-dev \
+          libwayland-egl-backend-dev \
+          libxkbcommon-dev \
+          libxrandr-dev \
+          libxinerama-dev \
+          libx11-dev \
+          libxcursor-dev \
+          libxi-dev \
+          libxext-dev \
+          libxcomposite-dev \
+          libxdamage-dev \
+          libxfixes-dev \
+          mesa-common-dev
+
+    - name: Set up Python
+      uses: actions/setup-python@v5.1.1
       with:
-        python-versions: '3.11'
-        build-requirements: 'cmake'
-        system-packages: 'libX11-devel libXrandr-devel libXinerama-devel libXcursor-devel libXi-devel mesa-libGL-devel'
-        pre-build-command: |
-          echo "Debugging environment:"
-          ls /
-          ls /opt
-          ls /opt/python
-          which python
-          python --version
-          which pip
-          pip --version
-          env | sort
-          
-          # Use the appropriate Python version
-          PYTHON_PATH=$(ls /opt/python | grep cp311)
-          if [ -z "$PYTHON_PATH" ]; then
-            echo "Python 3.11 not found"
-            exit 1
-          fi
-          export PATH="/opt/python/$PYTHON_PATH/bin:$PATH"
-          
-          python --version
-          pip --version
-          
-          # Rest of your build commands here...
-          # Install Wayland from source
-          curl -LO https://wayland.freedesktop.org/releases/wayland-1.18.0.tar.xz
-          tar xf wayland-1.18.0.tar.xz
-          cd wayland-1.18.0
-          ./configure
-          make
-          make install
-          cd ..
-          
-          # Install libxkbcommon from source
-          curl -LO https://github.com/xkbcommon/libxkbcommon/archive/xkbcommon-0.10.0.tar.gz
-          tar xzf xkbcommon-0.10.0.tar.gz
-          cd libxkbcommon-xkbcommon-0.10.0
-          ./autogen.sh
-          ./configure
-          make
-          make install
-          cd ..
-          
-          # Update library path
-          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
-          
-          # Now run CMake and build
-          cmake -DPYBIND11_PYTHON_VERSION="3.11" -S . -B build -DCMAKE_BUILD_TYPE=Release
-          cmake --build build --config Release
-  
+        python-version: ${{ env.PYTHON_VERSION }}
+
+    - name: Install dependencies
+      run: |
+        pip install -r requirements.txt
+        pip install cmake
+        pip install auditwheel
+        pip install build
+
+    - name: Build Wheel
+      run: |
+        cmake -DPYBIND11_PYTHON_VERSION="${{ env.PYTHON_VERSION }}" -S . -B build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+        cmake --build build --config ${{ env.BUILD_TYPE }}
+        python -m build -w ./PythonBuild
+
+    - name: Repair Wheel with auditwheel
+      run: |
+        mkdir -p repaired_wheels
+        for whl in PythonBuild/dist/*.whl; do
+          auditwheel repair "$whl" --plat manylinux_2_28_x86_64 -w repaired_wheels/
+        done
+
     - name: Install Twine
       run: pip install twine
-  
+
     - name: Publish on PyPI
-      run: python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} wheelhouse/*.whl --verbose --disable-progress-bar
+      run: python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} repaired_wheels/* --verbose --disable-progress-bar
