--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -84,16 +84,13 @@ jobs:
         export CXX=/opt/rh/devtoolset-10/root/usr/bin/g++
         export PYTHON_EXECUTABLE=/opt/python/cp311-cp311/bin/python
         export PYTHON_INCLUDE_DIR=/opt/python/cp311-cp311/include/python3.11
-        export PYTHON_LIBRARY=/opt/python/cp311-cp311/lib/libpython3.11.so
         ls -l \$PYTHON_INCLUDE_DIR
-        ls -l \$PYTHON_LIBRARY
+        \$PYTHON_EXECUTABLE -c \"import sysconfig; print(sysconfig.get_config_var('LIBDIR'))\"
         cmake -DPYTHON_EXECUTABLE=\$PYTHON_EXECUTABLE \
               -DPYTHON_INCLUDE_DIR=\$PYTHON_INCLUDE_DIR \
-              -DPYTHON_LIBRARY=\$PYTHON_LIBRARY \
               -DPython3_ROOT_DIR=/opt/python/cp311-cp311 \
               -DPython3_EXECUTABLE=\$PYTHON_EXECUTABLE \
               -DPython3_INCLUDE_DIR=\$PYTHON_INCLUDE_DIR \
-              -DPython3_LIBRARY=\$PYTHON_LIBRARY \
               -DPYBIND11_PYTHON_VERSION='3.11' \
               -DCMAKE_C_COMPILER=\$CC \
               -DCMAKE_CXX_COMPILER=\$CXX \
