--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -77,7 +77,9 @@ jobs:
         export PATH=\$PYTHON_ROOT/bin:\$PATH
         export PYTHON_EXECUTABLE=\$PYTHON_ROOT/bin/python
         export PYTHON_INCLUDE_DIR=\$PYTHON_ROOT/include/python3.11
-        export PYTHON_LIBRARY=\$PYTHON_ROOT/lib/libpython3.11.so
+        
+        # Find the Python library
+        export PYTHON_LIBRARY=\$(find \$PYTHON_ROOT -name 'libpython3.11*.so*' | head -n 1)
         
         # Debug information
         echo \"Python executable: \$PYTHON_EXECUTABLE\"
