--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -76,31 +76,25 @@ jobs:
         export PYTHON_ROOT=/opt/python/cp311-cp311
         export PATH=\$PYTHON_ROOT/bin:\$PATH
         export PYTHON_EXECUTABLE=\$PYTHON_ROOT/bin/python
-        export PYTHON_INCLUDE_DIR=\$PYTHON_ROOT/include/python3.11
-        
-        # Find the Python library
-        export PYTHON_LIBRARY=\$(find \$PYTHON_ROOT -name 'libpython3.11*.so*' | head -n 1)
         
         # Debug information
         echo \"Python executable: \$PYTHON_EXECUTABLE\"
-        echo \"Python include dir: \$PYTHON_INCLUDE_DIR\"
-        echo \"Python library: \$PYTHON_LIBRARY\"
+        echo \"Python root: \$PYTHON_ROOT\"
         \$PYTHON_EXECUTABLE --version
         \$PYTHON_EXECUTABLE -c \"import sys; print(sys.prefix)\"
-        \$PYTHON_EXECUTABLE -c \"import sysconfig; print(sysconfig.get_config_var('LIBDIR'))\"
-        ls -l \$PYTHON_INCLUDE_DIR
-        ls -l \$PYTHON_LIBRARY
+        \$PYTHON_EXECUTABLE -c \"import sysconfig; print(sysconfig.get_paths())\"
         
         \$PYTHON_EXECUTABLE -m pip install --upgrade pip
         \$PYTHON_EXECUTABLE -m pip install -r requirements.txt
         \$PYTHON_EXECUTABLE -m pip install cmake build auditwheel
         
-        # CMake configuration with explicit Python paths
+        # CMake configuration for module development
         \$PYTHON_EXECUTABLE -m cmake \
           -DPython3_ROOT_DIR=\$PYTHON_ROOT \
           -DPython3_EXECUTABLE=\$PYTHON_EXECUTABLE \
-          -DPython3_INCLUDE_DIR=\$PYTHON_INCLUDE_DIR \
-          -DPython3_LIBRARY=\$PYTHON_LIBRARY \
+          -DPython_FIND_STRATEGY=LOCATION \
+          -DPython_FIND_REGISTRY=NEVER \
+          -DPython_FIND_FRAMEWORK=NEVER \
           -DPYBIND11_PYTHON_VERSION=3.11 \
           -S . -B build -DCMAKE_BUILD_TYPE=Release
         
