trying to fix cicd for the 1000th time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,12 +18,12 @@ endforeach()
 # If PYBIND11_PYTHON_VERSION is not set just use the default python version
 if(NOT DEFINED PYBIND11_PYTHON_VERSION)
   message("Looking for LAST Python version ${PYBIND11_PYTHON_VERSION}")
-  find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
+  find_package(Python3 COMPONENTS Interpreter Development.Module REQUIRED)
 else()
   message("Looking for EXACT Python version ${PYBIND11_PYTHON_VERSION}")
-  find_package(Python3 ${PYBIND11_PYTHON_VERSION} EXACT COMPONENTS Interpreter Development REQUIRED)
+  find_package(Python3 ${PYBIND11_PYTHON_VERSION} EXACT COMPONENTS Interpreter Development.Module REQUIRED)
 endif()
-message("TensorFrost found Python: ${Python_VERSION}")
+message("TensorFrost found Python: ${Python3_VERSION}")
 
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
 set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
