--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -107,6 +107,8 @@ jobs:
           -DPython_FIND_REGISTRY=NEVER \
           -DPython_FIND_FRAMEWORK=NEVER \
           -DPYBIND11_PYTHON_VERSION=3.11 \
+          -DCMAKE_C_FLAGS="-D_POSIX_C_SOURCE=200809L -D_GNU_SOURCE" \
+          -DCMAKE_CXX_FLAGS="-D_POSIX_C_SOURCE=200809L -D_GNU_SOURCE" \
           -S . -B build -DCMAKE_BUILD_TYPE=Release
         
         \$PYTHON_EXECUTABLE -m cmake --build build --config Release
