--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -81,6 +81,7 @@ jobs:
           libXcomposite-devel \
           libwayland-client \
           libevdev-devel \
+          linux-headers \
           && yum clean all
         
         # Use Python 3.11 from /opt/python
@@ -107,8 +108,8 @@ jobs:
           -DPython_FIND_REGISTRY=NEVER \
           -DPython_FIND_FRAMEWORK=NEVER \
           -DPYBIND11_PYTHON_VERSION=3.11 \
-          -DCMAKE_C_FLAGS=\"-D_POSIX_C_SOURCE=200809L -D_GNU_SOURCE\" \
-          -DCMAKE_CXX_FLAGS=\"-D_POSIX_C_SOURCE=200809L -D_GNU_SOURCE\" \
+          -DCMAKE_C_FLAGS=\"-D_GNU_SOURCE -D_POSIX_C_SOURCE=200809L -Wno-error\" \
+          -DCMAKE_CXX_FLAGS=\"-D_GNU_SOURCE -D_POSIX_C_SOURCE=200809L -Wno-error\" \
           -S . -B build -DCMAKE_BUILD_TYPE=Release
         
         \$PYTHON_EXECUTABLE -m cmake --build build --config Release
