--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -81,12 +81,7 @@ jobs:
           libXcomposite-devel \
           libwayland-client \
           libevdev-devel \
-          linux-headers \
-          wayland-scanner \
           && yum clean all
-        
-        # Ensure wayland-scanner is in PATH
-        export PATH=/usr/bin:\$PATH
         
         # Use Python 3.11 from /opt/python
         export PYTHON_ROOT=/opt/python/cp311-cp311
@@ -111,9 +106,10 @@ jobs:
           -DPython_FIND_STRATEGY=LOCATION \
           -DPython_FIND_REGISTRY=NEVER \
           -DPython_FIND_FRAMEWORK=NEVER \
+          -DGLFW_BUILD_WAYLAND=OFF \
           -DPYBIND11_PYTHON_VERSION=3.11 \
-          -DCMAKE_C_FLAGS=\"-D_GNU_SOURCE -D_POSIX_C_SOURCE=200809L -Wno-error\" \
-          -DCMAKE_CXX_FLAGS=\"-D_GNU_SOURCE -D_POSIX_C_SOURCE=200809L -Wno-error\" \
+          -DCMAKE_C_FLAGS=\"-D_POSIX_C_SOURCE=200809L -D_GNU_SOURCE\" \
+          -DCMAKE_CXX_FLAGS=\"-D_POSIX_C_SOURCE=200809L -D_GNU_SOURCE\" \
           -S . -B build -DCMAKE_BUILD_TYPE=Release
         
         \$PYTHON_EXECUTABLE -m cmake --build build --config Release
